--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "RAVANA 3.1",
-    "description": "RAVANA💢 project - Makes it easy and fun to use Whatsapp. World’s first UserBot made for WhatsApp.",
+    "name": "DATA THIEVES 2.0",
+    "description": "DATA THIEVE🤖 project - Makes it easy and fun to use Whatsapp. World’s first UserBot made for WhatsApp.",
     "logo": "https://telegra.ph/file/d2d9e494d6938b6b81a3c.jpg",
-    "keywords": ["whatsapp", "userbot", "RAVANA", "RAVANA", "bot", "api", "ai"],
-    "repository": "https://github.com/RAVANA-SL/slRavana",
-    "website":   "https://chat.whatsapp.com/BZxwFPt5pUe19Y4EW9DjDP",
-    "success_url": "https://chat.whatsapp.com/BZxwFPt5pUe19Y4EW9DjDP",
+    "keywords": ["whatsapp", "userbot", "DATA THIEVES", "DATA THIEVES", "bot", "api", "ai"],
+    "repository": "https://github.com/Thushan2003/theve",
+    "website":   "https://chat.whatsapp.com/IKA5fZukPT60P3vKMcWGJW",
+    "success_url": "https://chat.whatsapp.com/IKA5fZukPT60P3vKMcWGJW",
     "stack": "container",
     "env": {
         "ASENA_SESSION": {
