--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "DATA THIEVES 2.0",
     "description": "DATA THIEVE🤖 project - Makes it easy and fun to use Whatsapp. World’s first UserBot made for WhatsApp.",
-    "logo": "https://telegra.ph/file/d2d9e494d6938b6b81a3c.jpg",
+    "logo": "https://telegra.ph/file/3f3740c3e61fc021dca16.png",
     "keywords": ["whatsapp", "userbot", "DATA THIEVES", "DATA THIEVES", "bot", "api", "ai"],
     "repository": "https://github.com/Thushan2003/theve",
     "website":   "https://chat.whatsapp.com/IKA5fZukPT60P3vKMcWGJW",
